feat: extends job navigation, code completion; process hidden jobs